# kdrive-upload

./: CHANGES.rst  README.md  README.rst  kdrive-upload.cfg  setup.cfg  setup.py  sniplet.py
.github/workflows/: python-app.yml  python-publish.yml
src/kdrive_upload/: __main__.py  kdrive.py  kdrive_test.py
