[metadata]
name = kdrive_upload
version = 0.4
description = Upload files to kDrive
long_description = file: README.md
author = Rene Luria
author_email = rene.luria@infomaniak.com

[options]
package_dir=
    =src
packages = find:
install_requires =
    webdavclient3
tests_require =
    pytest
    tox
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    kdrive-upload = kdrive_upload.__main__:main
