[metadata]
name = kdrive_upload
version = x.x.x
description = Upload files to kDrive
long_description = file: README.rst
author = Rene Luria
author_email = rene.luria@infomaniak.com

[options]
package_dir=
    =src
packages = find:
install_requires =
    webdavclient3
tests_require =
    pytest
    tox
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    kdrive-upload = kdrive_upload.__main__:main
